위에 헤더 사이드바 열리는거해야함
..

--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -513,19 +513,19 @@
         <section class="news">
             <div class="wrapper">
                 <div class="title">에케의 소식을 여기에 모았어요</div>
-                <div class="section"> <!-- 좌우 요소를 감싸는 요소 -->
+                <div class="section">
                     <div class="tit">
                         <div class="fix_title">에어로 케이<br>어디까지 만나봤니?</div>
-                        <button>브랜드만나보기</button>
-                    </div> <!-- 고정될 요소 -->
-                    <div class="cont_wrap"> <!-- 스크롤될 요소를 감싸는 요소 -->
-                        <div class="cont"> <!-- 스크롤될 요소 (이 내부에 콘텐츠를 코딩해야함, 스크롤될 요소가 여러개면 안됨) -->
+                        <button type="button">브랜드 만나보기</button>
+                    </div>
+                    <div class="cont_wrap">
+                        <div class="cont">
                             <ul>
                                 <li>
                                     <a href="#n">
-                                        <div class="photo a">사진</div>
+                                        <div class="photo a" alt="도쿄 여행">사진</div>
                                         <div class="content_title">나만이 알고 싶은 도쿄 구석을 알려주세요</div>
-                                        <p>낯선 곳을 여행할때는 믿을 ’구석’이 필요해요. 도쿄로 떠날 예비 여행자들을 을 위해 구석 구석 알려주세요</p>
+                                        <p>낯선 곳을 여행할 때는 믿을 ‘구석’이 필요해요. 도쿄로 떠날 예비 여행자들을 위해 구석구석 알려주세요.</p>
                                         <div class="label_group">
                                             <label class="active">#도쿄</label>
                                             <label>#여행자</label>
@@ -536,26 +536,21 @@
                                 </li>
                                 <li>
                                     <a href="#n">
-                                        <div class="photo b">사진</div>
+                                        <div class="photo b" alt="몽골 여행">사진</div>
                                         <div class="content_title">여기는 지금 몽골</div>
-                                        <p>1년중 몽골 여행이 가장 좋은 지금 에어로케이와 울란바토르로 떠나세요 항공권 할인 코드와 매일 추점하는 항공권</p>
+                                        <p>1년 중 몽골 여행이 가장 좋은 시기! 에어로케이와 함께 울란바토르로 떠나세요. 항공권 할인 코드 및 추첨 이벤트 진행 중!</p>
                                         <div class="label_group">
                                             <label class="active">#몽골</label>
                                             <label>#울란바토르</label>
-                                            <label>#사막/label>
+                                            <label>#사막</label>
                                         </div>
                                     </a>
                                 </li>
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="#n">
-                                        <div class="photo c">사진</div>
+                                        <div class="photo c" alt="삿포로 여행">사진</div>
                                         <div class="content_title">에어로케이 시티 에디터 삿포로 편</div>
-                                        <p>에어로케이가 청주-삿포로 노선을 취항하며, 직접 만든 업사이클 필름 카메라와 함께 삿포로로 사진 여행을 떠날 시티 에디터를 찾습니다.
-                                            영화 &lt;윤희에게와&gt; &lt;러브레터&gt; 속 촬영지로 알려진 홋카이도.
-                                            12월 내내 눈이 내리는 도시인 홋카이도의 삿포로로 떠나 도심을 밝히는 불빛,
-                                            설경에 녹아든 사람들, 나만 알고 싶은 멋진 공간을 담아와 주세요.</p>
+                                        <p>에어로케이가 청주-삿포로 노선을 취항하며, 업사이클 필름 카메라와 함께 떠날 시티 에디터를 찾습니다.</p>
                                         <div class="label_group">
                                             <label class="active">#삿포로</label>
                                             <label>#겨울</label>
@@ -565,11 +560,9 @@
                                 </li>
                                 <li>
                                     <a href="#n">
-                                        <div class="photo d">사진</div>
-                                        <div class="content_title">AEROK MEETS OSAKA 오사카스러운</div>
-                                        <p>에어로케이가 취항한 도시를 소개하는 &lt;Aero K Meets&gt; &lt; 시리즈의 이번 편은 오사카입니다. 에어로케이의 첫 국제선 취항지이자 많은 한국 여행객에게 사랑받는 도시이죠.
-                                            오사카 하면 무엇이 떠오르나요? 글리코상? 타코야키? 오사카 사투리? 오사카 사람들이 자주 하는 말이 있습니다.
-                                            “오사카는 오사카다.”과연 ‘오사카스럽다’는 건 무엇일까요?</p>
+                                        <div class="photo d" alt="오사카 여행">사진</div>
+                                        <div class="content_title">AEROK MEETS OSAKA</div>
+                                        <p>오사카 하면 무엇이 떠오르나요? 에어로케이의 오사카 시리즈에서 그 답을 찾아보세요!</p>
                                         <div class="label_group">
                                             <label class="active">#오사카</label>
                                             <label>#오사카스러운</label>
@@ -577,16 +570,11 @@
                                         </div>
                                     </a>
                                 </li>
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="#n">
-                                        <div class="photo e">사진</div>
-                                        <div class="content_title">나만이 알고 싶은 도쿄 50명 에어로케이 국제선 항공권 증정 이벤트 구석을 알려주세요</div>
-                                        <p>올 한 해 스스로를 돌아보는 시간이 있었나요?
-                                            2023년의 끝과 2024년 시작 사이, 에어로케이가 오롯이 나에게 집중하는 여정인 리추얼 트래블을 제안합니다.
-                                            여행지에서 스스로를 들여다보고 나만의 리추얼을 기록해 보세요.
-                                            에어로케이의 취항지에서 영감을 받은 리추얼 트래블을 확인하고 가장 나다운 여행을 들려주세요.</p>
+                                        <div class="photo e" alt="항공권 이벤트">사진</div>
+                                        <div class="content_title">나만이 알고 싶은 도쿄 50명 항공권 증정</div>
+                                        <p>2023년을 마무리하며 나만의 리추얼 트래블을 경험해 보세요.</p>
                                         <div class="label_group">
                                             <label class="active">#일본</label>
                                             <label>#오사카</label>
@@ -597,14 +585,9 @@
                                 </li>
                                 <li>
                                     <a href="#n">
-                                        <div class="photo f">사진</div>
+                                        <div class="photo f" alt="기내 도서관">사진</div>
                                         <div class="content_title">180 Books on Board</div>
-                                        <p>에어로케이가 여성의 날을 맞아 한 달 동안 기내 도서관을 운영합니다. 독립출판 전문 북 스토어 다시서점 @dasibookshop 과 함께 여성을 주제로 한 책 80여 종과
-                                            이 외에도 환경, 행복, 여행에 관한 책까지 총 180권을 선정해 각 좌석마다 다르게 배치하였습니다. 
-                                            
-                                            오늘 앉은 좌석에는 어떤 책이 있었나요? 개인 SNS 채널에 오늘 만난 책을 소개해주세요.
-                                            에어로케이 공식 인스타그램 @aerok.official태그 또는 #에어로케이로 블로그 후기를 남겨주시면 
-                                            추첨을 통해 총 10분께 선물을 보내드립니다.</p>
+                                        <p>여성을 주제로 한 책 80여 종과 환경, 행복, 여행 관련 도서를 기내에서 만나보세요.</p>
                                         <div class="label_group">
                                             <label class="active">#기내도서관</label>
                                             <label>#에어로케이</label>
@@ -612,28 +595,22 @@
                                         </div>
                                     </a>
                                 </li>
-                            </ul>
-                            <ul>
                                 <li>
                                     <a href="#n">
-                                        <div class="photo g">사진</div>
+                                        <div class="photo g" alt="CAVA LIFE 협업">사진</div>
                                         <div class="content_title">Aero K x CAVA LIFE</div>
-                                        <p>새로운 라이프 스타일을 선도하는 에어로케이와 동시대 작가들을 위한 플랫폼 카바 라이프가 협업해 &lt;Tokyo B-Cut&gt;프로젝트를 선보입니다.
-                                            에어로케이항공이 취항한 도시와 로컬 사람들의 이야기를 들려주는 Aero K Meets 시리즈의 도쿄편인 &lt;Tokto B-Cut&gt;은 카바 라이프의 기획으로
-                                            도쿄에서 나고 자란 다섯 팀의 예술가를 소개하는 흥미로운 인터뷰 영상과 오리지널 머천다이즈, 그리고 공연으로 구성된 프로젝트입니다.
-                                            도쿄의 젊고 역동적인 아트&음악 씬을 대표하는 시각 예술가 소에다 나나, 사진가 엔도 아야카, 조각가 마루야마 타로, 그리고 뮤지션 훈과 타마나라멘의 눈을 통해
-                                            이 도시의 현재를 입체적으로 다룬 이번 프로젝트는 기내 매거진에서도 만나보실 수 있습니다.</p>
+                                        <p>에어로케이와 카바 라이프가 협업한 도쿄 B-Cut 프로젝트를 만나보세요!</p>
                                         <div class="label_group">
                                             <label class="active">#도쿄</label>
-                                            <label>#키바라이프</label>
+                                            <label>#카바라이프</label>
                                         </div>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#n">
-                                        <div class="photo h">사진</div>
+                                        <div class="photo h" alt="Color your life">사진</div>
                                         <div class="content_title">Color your life</div>
-                                        <p>더 다양한 색으로 담는 이야기 에어로케이의 네이바 좌석, 상공의 하얀 구, 목적지 노란 안내판, 일몰의 붉은 하늘과 시야를 가득 채우는 녹음</p>
+                                        <p>더 다양한 색으로 담는 이야기! 목적지 노란 안내판, 일몰의 붉은 하늘과 녹음까지 색의 감성을 느껴보세요.</p>
                                         <div class="label_group">
                                             <label class="active">#컬러</label>
                                             <label>#너의 삶</label>
@@ -647,6 +624,7 @@
                 </div>
             </div>
         </section>
+        
         <footer>
             <div class="wrapper">
                 <h1 class="logo"><a href="index.html">에어로케이</a></h1>
