헤더 쪽 변경해야함
건드는중임

--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -20,75 +20,71 @@
         <a class="menu" href="skip_nav">주메뉴바로가기</a>
     </div>
     <div class="wrap">
-        <header>
+        <header class="mo_open">
             <h1 class="logo"><a href="index.html">에어로케이</a></h1>
             <nav class="gnb">
                 <button class="gnb_open">메뉴열기</button>
-                <div class="gnb_wrap">
-                    <ul class="depth1">
-                        <li class="open">
-                             <!--pc 버전에서 메뉴에 마우스를 올리면 : over
-                                모바일에서 메뉴를 클릭해서 열면 : open -->
-                            <a href="#n"><span>예약</span></a>
-                            <ul class="depth2">
-                                <li><a href="#n">항공권</a></li>
-                                <li><a href="#n">여행 준비</a></li>
-                                <li><a href="#n">운항 스케줄</a></li>
-                                <li><a href="#n">항공권 예매 안내</a></li>
-                                <li><a href="#n">운임 및 할인 안내</a></li>
-                                <li><a href="#n">수수료 및 규정 안내</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#n"><span>나의 예약</span></a>
-                            <ul class="depth2">
-                                <li><a href="#n">비회원 예약 조회</a></li>
-                                <li><a href="#n">온라인 체크인</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#n"><span>이벤트</span></a>
-                            <ul class="depth2">
-                                <li><a href="#">정기간행물</a></li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#n"><span>서비스 안내</span></a>
-                            <ul class="depth2">
-                                <li><a href="#">도움이 필요한 손님</a></li>
-                                <li><a href="#">탑승 수속</a></li>
-                                <li><a href="#">수하물</a></li>
-                                <li><a href="#">부가서비스</a></li>
-                                <li><a href="#">기내서비스</a></li>
-                                <li><a href="#">제휴 서비스</a></li>                        
-                            </ul>
-                        </li>
-                        <li>
-                            <a href="#n"><span>고객센터</span></a>
-                            <ul class="depth2">
-                                <li><a href="#">FAQ</a></li>
-                                <li><a href="#">고객상담</a></li>
-                                <li><a href="#">공지사항</a></li>
-                                <li><a href="#">유실물 센터</a></li>
-                                <li><a href="#">서식자료실</a></li>
-                                <li><a href="#">약관 및 고지사항</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#n"><span>브랜드 샵</span></a></li>
-                        <div class="m_lang"><button>한국어</button></div>
-                        <button class="gnb_close">메뉴닫기</button>
-                    </ul>
-                </div>
+                    <div class="gnb_wrap">
+                        <ul class="depth1">
+                            <li>
+                                <a href="#n"><span>예약</span></a>
+                                <ul class="depth2">
+                                    <li><a href="#n">항공권</a></li>
+                                    <li><a href="#n">여행 준비</a></li>
+                                    <li><a href="#n">운항 스케줄</a></li>
+                                    <li><a href="#n">항공권 예매 안내</a></li>
+                                    <li><a href="#n">운임 및 할인 안내</a></li>
+                                    <li><a href="#n">수수료 및 규정 안내</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#n"><span>나의 예약</span></a>
+                                <ul class="depth2">
+                                    <li><a href="#n">비회원 예약 조회</a></li>
+                                    <li><a href="#n">온라인 체크인</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#n"><span>이벤트</span></a>
+                                <ul class="depth2">
+                                    <li><a href="#">정기간행물</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#n"><span>서비스 안내</span></a>
+                                <ul class="depth2">
+                                    <li><a href="#">도움이 필요한 손님</a></li>
+                                    <li><a href="#">탑승 수속</a></li>
+                                    <li><a href="#">수하물</a></li>
+                                    <li><a href="#">부가서비스</a></li>
+                                    <li><a href="#">기내서비스</a></li>
+                                    <li><a href="#">제휴 서비스</a></li>                        
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#n"><span>고객센터</span></a>
+                                <ul class="depth2">
+                                    <li><a href="#">FAQ</a></li>
+                                    <li><a href="#">고객상담</a></li>
+                                    <li><a href="#">공지사항</a></li>
+                                    <li><a href="#">유실물 센터</a></li>
+                                    <li><a href="#">서식자료실</a></li>
+                                    <li><a href="#">약관 및 고지사항</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#n"><span>브랜드 샵</span></a></li>
+                        </ul>
+                    </div>
+                <button class="gnb_close">메뉴닫기</button>
             </nav>
             <div class="tnb">                
                 <div class="lang">
-                    <button>한국어</button>
+                    <div class="ko"><a href="#n">KO</a></div>
                     <ul class="lang_wrap">
                         <li><a href="#n">KO</a></li>
                         <li><a href="#n">EN</a></li>
                     </ul>
                 </div>
-                <div class="menu"><button>메뉴바</button></div>
             </div>
         </header>
         <section class="visual">
@@ -105,7 +101,7 @@
                             <a class="popup_title_1" href="#n">
                                 <div class="logo">로고</div>
                                 <strong>에어로케이 탑승객 대상 호텔 할인</strong>
-                                <div class="visual_title_L">최대 64%</div>
+                                <div class="visual_title_L">최대 5000마일리지 제공</div>
                             </a>
                         </li>
                         <li class="swiper-slide">                    
