header 만들때 클래스 따로줘서 만들어야함
..

--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -20,7 +20,7 @@
         <a class="menu" href="skip_nav">주메뉴바로가기</a>
     </div>
     <div class="wrap">
-        <header class="mo_open">
+        <header>
             <h1 class="logo"><a href="index.html">에어로케이</a></h1>
             <nav class="gnb">
                 <button class="gnb_open">메뉴열기</button>
