--- a/Aerok/index.html
+++ b/Aerok/index.html
@@ -501,7 +501,7 @@
             </section>
             <section class="help">
                 <div class="wrapper">
-                    <h2>도움이필요하신가요?</h2>
+                    <h2>도움이 필요하신가요?</h2>
                         <div class="inner">
                             <div class="sale_coupon">
                                 <strong>할인쿠폰</strong>
@@ -518,8 +518,8 @@
             </section>
             <section class="news">
                 <div class="wrapper">
-                    <h2>에케의 소식을 여기에 모았어요</h2>
-                    <div class="inner">
+                    <h2>에케의 소식을<br>여기에 모았어요</h2>
+                    <div class="news_group">
                         <div class="tit">
                             <h3>에어로 케이<br>어디까지 만나봤니?</h3>
                             <button type="button">브랜드 만나보기</button>
@@ -603,7 +603,7 @@
                                     </li>
                                     <li>
                                         <a href="#n">
-                                            <div class="photo"><img src="../Aerok/images/news/news_06.jpg" alt="CAVA LIFE 협업">CAVA LIFE 협업</div>
+                                            <div class="photo"><img src="../Aerok/images/news/news_07.jpg" alt="CAVA LIFE 협업">CAVA LIFE 협업</div>
                                             <h3>Aero K x CAVA LIFE</h3>
                                             <p>에어로케이와 카바 라이프가 협업한 도쿄 B-Cut 프로젝트를 만나보세요!</p>
                                             <div class="tag_group">
@@ -614,7 +614,7 @@
                                     </li>
                                     <li>
                                         <a href="#n">
-                                            <div class="photo"><img src="./images/news/news_07.jpg" alt="Color your life">Color your life</div>
+                                            <div class="photo"><img src="./images/news/news_08.jpg" alt="Color your life">Color your life</div>
                                             <h3>Color your life</h3>
                                             <p>더 다양한 색으로 담는 이야기! 목적지 노란 안내판, 일몰의 붉은 하늘과 녹음까지 색의 감성을 느껴보세요.</p>
                                             <div class="tag_group">
